data/all_generated_tests/raw_wast_tests/if_InfiniteLoops_1549.wast
;; 10. **Test Description**: Design a `loop` that evaluates an `if` condition dependent on a global state or external memory load, with nested branches interacting with global variables or memory indices.    **Constraint Checked**: Evaluates proper handling of global state and memory within nested branches of `if` inside a loop.    **Relation to Infinite Loops**: Incorrect state management or memory interaction could lead to repeated condition fulfillment, looping forever.

(assert_invalid
  (module
    (global $g (mut i32) (i32.const 0))
    (memory 1)
    (func $loop_if_global (result i32)
      (loop $loop
        (if (result i32)
          (global.get $g)
          (then
            (i32.add (global.get $g) (i32.const 1))
            (global.set $g)
            (br $loop)
          )
          (else
            (i32.load (i32.const 0)) ;; Assuming memory interaction
          )
        )
      )
    )
  )
  "type mismatch"
)